--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,8 @@
                 <div class="cadastroUsuarios">
                     {{msg}}
                     <form action="cadastrar_usuarios" method="post">
-                        <input type="text" name="usuario" placeholder="usuário">
-                        <input type="password" name="senha" placeholder="senha">
+                        <input type="text" name="usuario" placeholder="usuário" required>
+                        <input type="password" name="senha" placeholder="senha" required>
                         <input type="submit" value="cadastrar">
                     </form>
                 </div>
