--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
 <body>
     <section class="area_login">
         <div class="login">
-            {{msg}}
+            <h6>{{msg}}</h6>
             <form action="login" method="post">
                 <input type="text" name="usuario" placeholder="usuário" autofocus>
                 <input type="password" name="senha" placeholder="senha">
